Make TreeRouter store subpaths captured by wildcards as variables

--- a/examples/handler_storage/page.html
+++ b/examples/handler_storage/page.html
@@ -4,7 +4,7 @@
 	<title>Counter</title>
 
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="/res/style.css">
+	<link rel="stylesheet" type="text/css" href="/res/css/style.css">
 </head>
 <body>
 	<div><span><a href="/sub">-</a> {} <a href="/add">+</a></span></div>
